修改子账户表头字体为黑色：账户名/编号/币种/方向/持仓量等所有表头改为黑色字体

--- a/templates/anchor_system_real.html
+++ b/templates/anchor_system_real.html
@@ -738,21 +738,21 @@
             <div class="table-container">
                 <table id="subAccountPositionTable" style="width: 100%; table-layout: fixed;">
                     <thead>
-                        <tr style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white;">
-                            <th style="color: white; width: 7%;">账户名</th>
-                            <th style="color: white; width: 4%;">编号</th>
-                            <th style="color: white; width: 10%;">币种</th>
-                            <th style="color: white; width: 5%;">方向</th>
-                            <th style="color: white; width: 7%;">持仓量</th>
-                            <th style="color: white; width: 8%;">开仓均价</th>
-                            <th style="color: white; width: 8%;">标记价格</th>
-                            <th style="color: white; width: 4%;">杠杆</th>
-                            <th style="color: white; width: 10%;">未实现盈亏</th>
-                            <th style="color: white; width: 9%;">保证金</th>
-                            <th style="color: white; width: 7%;">收益率</th>
-                            <th style="color: white; width: 7%;">今日维护</th>
-                            <th style="color: white; width: 6%;">状态</th>
-                            <th style="color: white; width: 8%;">操作</th>
+                        <tr style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: #000;">
+                            <th style="color: #000; width: 7%;">账户名</th>
+                            <th style="color: #000; width: 4%;">编号</th>
+                            <th style="color: #000; width: 10%;">币种</th>
+                            <th style="color: #000; width: 5%;">方向</th>
+                            <th style="color: #000; width: 7%;">持仓量</th>
+                            <th style="color: #000; width: 8%;">开仓均价</th>
+                            <th style="color: #000; width: 8%;">标记价格</th>
+                            <th style="color: #000; width: 4%;">杠杆</th>
+                            <th style="color: #000; width: 10%;">未实现盈亏</th>
+                            <th style="color: #000; width: 9%;">保证金</th>
+                            <th style="color: #000; width: 7%;">收益率</th>
+                            <th style="color: #000; width: 7%;">今日维护</th>
+                            <th style="color: #000; width: 6%;">状态</th>
+                            <th style="color: #000; width: 8%;">操作</th>
                         </tr>
                     </thead>
                     <tbody id="subAccountPositionBody">
